# ML-Python-Hub

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
ml-app/: README.md  download_data.py  main.py
ml-app/.streamlit/: config.toml
